login and register fixed, list displayed

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -107,6 +107,7 @@
             android:layout_weight="1">
 
             <ImageButton
+                android:id="@+id/logout"
                 android:layout_width="0dp"
                 android:layout_height="160dp"
                 android:layout_marginRight="4dp"
