--- a/app/src/main/res/layout/activity_asset_pickup.xml
+++ b/app/src/main/res/layout/activity_asset_pickup.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_background" />
+            android:src="@drawable/ic_launcher_background"/>
 
         <TextView
             android:id="@+id/textView3"
