--- a/app/src/main/res/layout/date_time_selector.xml
+++ b/app/src/main/res/layout/date_time_selector.xml
@@ -7,9 +7,9 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="395dp"
+        android:layout_width="match_parent"
         android:layout_height="296dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         app:cardElevation="@dimen/fab_margin"
