--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -117,10 +117,11 @@
                 android:layout_weight="1" />
 
             <ImageButton
+                android:id="@+id/editDetails"
                 android:layout_width="0dp"
                 android:layout_height="160dp"
-                android:layout_marginTop="4dp"
                 android:layout_marginLeft="4dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1" />
