--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -20,7 +20,7 @@
             android:orientation="vertical"
             android:layout_weight="3">
             <TextView
-                android:layout_weight="3"
+                android:layout_weight="4"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:id="@+id/list_text_name"/>
@@ -40,6 +40,11 @@
                     android:layout_weight="1"
                     android:id="@+id/Location"/>
             </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:id="@+id/contact"/>
         </LinearLayout>
     </LinearLayout>
 
