--- a/app/src/main/res/layout/activity_asset_pickup.xml
+++ b/app/src/main/res/layout/activity_asset_pickup.xml
@@ -7,6 +7,7 @@
     android:fitsSystemWindows="true">
 
     <LinearLayout
+        android:background="@color/colorBg2"
         android:id="@+id/asset_detail_linear"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -40,10 +41,13 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="32dp"
+                android:fontFamily="monospace"
                 android:text="TextView"
-                android:textSize="28sp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textSize="36sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
             <TextView
                 android:id="@+id/assetId"
@@ -54,7 +58,8 @@
                 android:layout_marginTop="8dp"
                 android:text="TextView"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
-                app:layout_constraintTop_toBottomOf="@+id/assetNmae" />
+                app:layout_constraintTop_toBottomOf="@+id/assetNmae"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
             <TextView
                 android:id="@+id/assetPick"
@@ -64,6 +69,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="32dp"
                 android:text="TextView"
+                android:fontFamily="serif"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -76,6 +82,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="16dp"
                 android:text="TextView"
+                android:fontFamily="serif"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/assetPick" />
@@ -88,13 +95,15 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="16dp"
                 android:text="TextView"
+                android:fontFamily="serif"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/assetDrop" />
 
             <Button
+                android:background="@color/colorBg"
                 android:id="@+id/rentButton"
-                android:layout_width="65dp"
+                android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
@@ -105,14 +114,15 @@
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <Button
+                android:background="@color/colorBg"
                 android:id="@+id/userButton"
-                android:layout_width="61dp"
-                android:layout_height="36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="38dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="lender"
-                android:textSize="8sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/rentButton" />
 
