--- a/app/src/main/res/layout/fragment_admin_home.xml
+++ b/app/src/main/res/layout/fragment_admin_home.xml
@@ -30,7 +30,7 @@
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
                     android:scaleType="fitXY"
-                    android:src="@drawable/home2"
+                    android:src="@drawable/backdrop"
                     app:layout_collapseMode="parallax" />
             </FrameLayout>
 
@@ -75,6 +75,7 @@
             android:layout_weight="1">
 
             <ImageButton
+                android:background="@drawable/layout_background"
                 android:id="@+id/asset"
                 android:layout_width="0dp"
                 android:layout_height="160dp"
@@ -83,11 +84,11 @@
                 android:layout_marginRight="4dp"
                 android:layout_marginBottom="4dp"
                 android:layout_weight="1"
-                android:background="@color/colorBg"
                 android:scaleType="fitCenter"
                 android:src="@drawable/car" />
 
             <ImageButton
+                android:background="@drawable/layout_background"
                 android:id="@+id/profile"
                 android:layout_width="0dp"
                 android:layout_height="160dp"
@@ -96,7 +97,6 @@
                 android:layout_marginBottom="4dp"
                 android:layout_marginLeft="4dp"
                 android:layout_weight="1"
-                android:background="@color/colorBg"
                 android:scaleType="fitCenter"
                 android:src="@drawable/profile" />
 
@@ -108,6 +108,8 @@
             android:layout_weight="1">
 
             <ImageButton
+                android:src="@drawable/logout"
+                android:background="@drawable/layout_background"
                 android:id="@+id/logout"
                 android:layout_width="0dp"
                 android:layout_height="160dp"
@@ -118,6 +120,9 @@
                 android:layout_weight="1" />
 
             <ImageButton
+                android:src="@drawable/edit"
+                android:scaleType="fitCenter"
+                android:background="@drawable/layout_background"
                 android:id="@+id/editDetails"
                 android:layout_width="0dp"
                 android:layout_height="160dp"
