--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,7 +30,7 @@
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
                     android:scaleType="fitXY"
-                    android:src="@drawable/home2"
+                    android:src="@drawable/backdrop"
                     app:layout_collapseMode="parallax" />
             </FrameLayout>
 
@@ -74,13 +74,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <ImageButton
                 android:id="@+id/carButton"
                 android:layout_width="0dp"
-                android:layout_height="120dp"
+                android:layout_height="160dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginBottom="4dp"
@@ -93,7 +93,7 @@
             <ImageButton
                 android:id="@+id/bike"
                 android:layout_width="0dp"
-                android:layout_height="120dp"
+                android:layout_height="160dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="4dp"
@@ -107,7 +107,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <ImageButton
@@ -115,7 +115,7 @@
                 android:src="@drawable/sent"
                 android:id="@+id/sent"
                 android:layout_width="0dp"
-                android:layout_height="120dp"
+                android:layout_height="160dp"
                 android:layout_marginRight="4dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
@@ -127,7 +127,7 @@
                 android:background="@drawable/layout_background"
                 android:id="@+id/received"
                 android:layout_width="0dp"
-                android:layout_height="120dp"
+                android:layout_height="160dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
@@ -137,7 +137,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <ImageButton
@@ -145,7 +145,7 @@
                 android:background="@drawable/layout_background"
                 android:id="@+id/editDetails"
                 android:layout_width="0dp"
-                android:layout_height="120dp"
+                android:layout_height="160dp"
                 android:layout_marginRight="4dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
@@ -155,10 +155,11 @@
 
             <ImageButton
                 android:id="@+id/myasset"
-                android:src="@drawable/logout"
+                android:scaleType="center"
+                android:src="@drawable/keys"
                 android:background="@drawable/layout_background"
                 android:layout_width="0dp"
-                android:layout_height="120dp"
+                android:layout_height="160dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
@@ -171,7 +172,7 @@
             android:src="@drawable/logout"
             android:background="@drawable/layout_background"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="160dp"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="4dp"
             android:layout_marginRight="8dp"
