--- a/app/src/main/res/layout/request_items.xml
+++ b/app/src/main/res/layout/request_items.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="88dp">
+    android:layout_height="88dp"
+    android:background="@drawable/list_item_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +13,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:padding="4dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:background="@drawable/list_item_bg"/>
         <LinearLayout
             android:padding="4dp"
             android:layout_width="0dp"
@@ -23,7 +25,12 @@
                 android:layout_weight="3"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:id="@+id/list_text_name"/>
+                android:id="@+id/list_text_name"
+                android:fontFamily="monospace"
+                android:paddingLeft="8dp"
+                android:text="Hello World"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textStyle="bold"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -33,12 +40,18 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:id="@+id/cost"/>
+                    android:id="@+id/cost"
+                    android:fontFamily="serif"
+                    android:text="40 Rs/hr"
+                    android:textSize="18sp" />
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:id="@+id/Location"/>
+                    android:id="@+id/Location"
+                    android:fontFamily="serif"
+                    android:text="Allahabad"
+                    android:textSize="18sp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
