--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="88dp">
+    android:layout_height="88dp"
+    android:background="@drawable/list_item_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <ImageView
+            android:background="@drawable/list_item_bg"
             android:id="@+id/logo"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -19,32 +21,49 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_weight="3">
+
             <TextView
-                android:layout_weight="4"
+
+                android:id="@+id/list_text_name"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:id="@+id/list_text_name"/>
+                android:layout_weight="4"
+                android:fontFamily="monospace"
+                android:paddingLeft="8dp"
+                android:text="Hello World"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textStyle="bold" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2"
                 android:orientation="horizontal">
+
                 <TextView
+                    android:id="@+id/cost"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:id="@+id/cost"/>
+                    android:fontFamily="serif"
+                    android:text="40 Rs/hr"
+                    android:textSize="18sp" />
+
                 <TextView
+                    android:id="@+id/Location"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:id="@+id/Location"/>
+                    android:fontFamily="serif"
+                    android:text="Allahabad"
+                    android:textSize="18sp" />
             </LinearLayout>
+
             <TextView
+                android:id="@+id/contact"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2"
-                android:id="@+id/contact"/>
+                android:fontFamily="serif" />
         </LinearLayout>
     </LinearLayout>
 
